# simple-server-zec20

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-setup.md  pyproject.toml  python-setup.md  rubric.md  sqlite.md
.github/workflows/: ci.yml
cc_simple_server/: server.py
scripts/: test-api-endpoints.sh  validate-dockerfile.sh
